--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     max-width: 1400px;
     display: flex;
     height: 100vh;
+    justify-content: center;
 }
 
 h1 {
@@ -18,14 +19,28 @@ h1 {
 }
 
 .libros {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    text-align: center;
     width: 50%;
     background-color: rgb(0, 0, 0);
     color: white;
+}
+.libros-in {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+
+.proxlect {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    height: 50%;
+    background-color: white;
+    color: black;
 }
 
 .library {
