--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 16px;
+    font-family: Montserrat, sans-serif;
 }
 
 
@@ -13,6 +16,7 @@
     height: 100vh;
     justify-content: center;
 }
+
 
 h1 {
     font-size: 1.5em;
@@ -34,13 +38,25 @@ h1 {
 
 .proxlect {
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
     text-align: center;
     align-items: center;
     height: 50%;
     background-color: white;
     color: black;
+    gap: 10px;
+}
+
+#proxlect2 {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+#proxlect2 p{
+    margin: 5px;
 }
 
 .library {
@@ -53,7 +69,7 @@ h1 {
     padding-top: 8% ;
 }
 
-form {
+#form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -70,4 +86,8 @@ form>input {
 #submit {
     background-color: brown;
     color: white;
+}
+
+button {
+    display: block;
 }
